# sfml-snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Collider.cpp  Collider.hpp  Entity.cpp  Entity.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  LostState.cpp  LostState.hpp  Random.cpp  Random.hpp  Snake.cpp  Snake.hpp  State.cpp  State.hpp  Tail.cpp  Tail.hpp  Wall.cpp  Wall.hpp  main.cpp
